--- a/html assessment /index.html
+++ b/html assessment /index.html
@@ -47,7 +47,7 @@
         <li>JavaScript group project</li>
         <li>React project</li>
         <li>Node project</li>
-        <li>MongoDB projectr</li>
+        <li>MongoDB project</li>
         <li>Personal project</li>
       </ol>
       <div class="gallery"></div>
