--- a/html assessment /index.html
+++ b/html assessment /index.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lemuela Fapohunda. | Web Developer & Jeweller</title>
     <!---Connecting to CSS file-->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style/main.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/brands.min.css"
       integrity="sha512-rQgMaFKZKIoTKfYInSVMH1dSM68mmPYshaohG8pK17b+guRbSiMl9dDbd3Sd96voXZeGerRIFFr2ewIiusEUgg=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+      referrerpolicy="no-referrer"/>
   </head>
   <body>
     <!-- Navigation menu start -->
@@ -36,7 +35,7 @@
     <!---Homepage start-->
     <section id="Home">
       <h1 class="heading">LEMUELA FAPOHUNDA</h1>
-      
+
     </section>
     <!--Work/Projects page start-->
     <section id="Work">
