--- a/html assessment /index.html
+++ b/html assessment /index.html
@@ -12,7 +12,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/brands.min.css"
       integrity="sha512-rQgMaFKZKIoTKfYInSVMH1dSM68mmPYshaohG8pK17b+guRbSiMl9dDbd3Sd96voXZeGerRIFFr2ewIiusEUgg=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"/>
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <!-- Navigation menu start -->
@@ -35,12 +36,17 @@
     <!---Homepage start-->
     <section id="Home">
       <h1 class="heading">LEMUELA FAPOHUNDA</h1>
-
+        <p class="para-1"> 
+          <em
+            >Jewellers assistant by day, trainee full stack developer by
+            night.</em
+          >
+        </p>
     </section>
     <!--Work/Projects page start-->
     <section id="Work">
       <h1 class="heading">Work</h1>
-      <p>Pending Projects...</p>
+      <p class="para-2"><em>Projects coming soon.</em></p>
       <br />
       <ol class="list">
         <li>JavaScript group project</li>
@@ -49,24 +55,24 @@
         <li>MongoDB project</li>
         <li>Personal project</li>
       </ol>
-      
     </section>
     <!--Journal/Blog page start-->
     <section id="Journal">
       <h1 class="heading">Journal</h1>
-      <p>Journal coming soon.</p>
-      <p>
-        This space will be for updates for what I've been up to lately, cover
+      <p class="para-3"><em>Journal coming soon.</em></p>
+      <p class="para-2">
+        This space will be for updates for what I've been up to lately, I'll be sharing it all of
         challenges, successes, interests etc.
       </p>
     </section>
     <!--About page start-->
     <section id="About">
       <h1 class="heading">About</h1>
-      <p>Hi! My name is Lemuela.</p>
-      <p>
-        I'm an aspiring Full Stack Software Developer, currently gaining
-        firsthand skills and experience in the Black Codher Bootcamp.
+      <p class="para-4">
+        Hi! Join me on my career journey in pursing a unique career intertwining my interests in
+          fine jewellery and software developing. I'll be showcasing the first-hand skills I've gained and built 
+         in projects using front-end and back-end programming languages at the Black
+          Codher Bootcamp.
       </p>
     </section>
     <!--Start page start-->
